--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-img">
-                <img src="portfolio_girl.png" alt="Your Name" width="400px" height="400px">
+                <img src=".idea/portfolio_girl.png" alt="Your Name" width="400px" height="400px">
             </div>
             <div class="about-text">
                 <h3>Web Developer & Designer</h3>
@@ -860,7 +860,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1mMCymXeWX0h1-iIN1uokdCLVTkDYKbwf/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src="HTML.png" height="567" width="745">
+                        <img src=".idea/HTML.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -868,7 +868,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1_pEicXPP5nMr6MZgKjZNUDEXU15F9adV/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src="CSS.png" height="567" width="745">
+                        <img src=".idea/CSS.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -876,7 +876,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1aSCt9DhhlOglVBkkjsgeP1W9AMR1C8tL/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src="API%20SPRING.png" height="567" width="745">
+                        <img src=".idea/API%20SPRING.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -884,7 +884,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1bbZR5C4IwLmtGgI1y09G3oS9jNvPftTa/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src="React.png" height="567" width="745">
+                        <img src=".idea/React.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -892,7 +892,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1uyAYgbLcwCgatOtpUXowW974qEWS2-Re/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src="JS.png" height="567" width="745">
+                        <img src=".idea/JS.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -900,7 +900,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1FbXen_B5T30IQec4AUVgYWZFD7QrBwEv/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src="SQL.png" height="567" width="745">
+                        <img src=".idea/SQL.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -908,7 +908,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/185yP2arVh1KrLJoVAvGGxiywsTRTXTBA/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src="Git.png" height="567" width="745">
+                        <img src=".idea/Git.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -916,7 +916,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1zDHBFrFchEZL2swwLwTqq2LGr91oFOmU/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src="Spring.png" height="567" width="745">
+                        <img src=".idea/Spring.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -941,7 +941,7 @@
         <div class="projects-container">
             <div class="project-card">
                 <div class="project-img">
-                    <img src="VS.png" alt="Project 1">
+                    <img src=".idea/VS.png" alt="Project 1">
                 </div>
                 <div class="project-info">
                     <h4>Vehicle Service Management</h4>
@@ -955,7 +955,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <img src="Screenshot%202024-07-17%20161226.png" alt="Project 2">
+                    <img src=".idea/Screenshot%202024-07-17%20161226.png" alt="Project 2">
                 </div>
                 <div class="project-info">
                     <h4>Prediction of Autism Spectrum Disorder</h4>
@@ -969,7 +969,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <img src="Screenshot%202025-04-02%20152430.png" alt="Project 3">
+                    <img src=".idea/Screenshot%202025-04-02%20152430.png" alt="Project 3">
                 </div>
                 <div class="project-info">
                     <h4>Laundry Service Management</h4>
