--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-img">
-                <img src=".idea/portfolio_girl.png" alt="Your Name" width="400px" height="400px">
+                <img src="portfolio_girl.png" alt="Your Name" width="400px" height="400px">
             </div>
             <div class="about-text">
                 <h3>Web Developer & Designer</h3>
@@ -850,17 +850,17 @@
         </div>
         <div class="certificates-slider">
             <div class="certificates-track">
-                <div class="certificate-item">
+                <!-- <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1H331Da2Q6lERvSHnoF484CUNYsNF1bZ4/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src="Java.png" height="567" width="745">
+                        <img src="Spring.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
                     </a>
-                </div>
+                </div> -->
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1mMCymXeWX0h1-iIN1uokdCLVTkDYKbwf/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src=".idea/HTML.png" height="567" width="745">
+                        <img src="HTML.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -868,7 +868,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1_pEicXPP5nMr6MZgKjZNUDEXU15F9adV/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src=".idea/CSS.png" height="567" width="745">
+                        <img src="CSS.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -884,7 +884,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1bbZR5C4IwLmtGgI1y09G3oS9jNvPftTa/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src=".idea/React.png" height="567" width="745">
+                        <img src="React.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -892,7 +892,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1uyAYgbLcwCgatOtpUXowW974qEWS2-Re/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src=".idea/JS.png" height="567" width="745">
+                        <img src="JS.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -900,7 +900,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1FbXen_B5T30IQec4AUVgYWZFD7QrBwEv/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src=".idea/SQL.png" height="567" width="745">
+                        <img src="SQL.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -908,7 +908,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/185yP2arVh1KrLJoVAvGGxiywsTRTXTBA/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src=".idea/Git.png" height="567" width="745">
+                        <img src="Git.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -916,7 +916,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1zDHBFrFchEZL2swwLwTqq2LGr91oFOmU/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src=".idea/Spring.png" height="567" width="745">
+                        <img src="Spring.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -941,7 +941,7 @@
         <div class="projects-container">
             <div class="project-card">
                 <div class="project-img">
-                    <img src=".idea/VS.png" alt="Project 1">
+                    <img src="VS.png" alt="Project 1">
                 </div>
                 <div class="project-info">
                     <h4>Vehicle Service Management</h4>
