--- a/index.html
+++ b/index.html
@@ -850,14 +850,14 @@
         </div>
         <div class="certificates-slider">
             <div class="certificates-track">
-                <!-- <div class="certificate-item">
+                <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1H331Da2Q6lERvSHnoF484CUNYsNF1bZ4/view?usp=drive_link" target="_blank" class="certificate-link">
                         <img src="Spring.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
                     </a>
-                </div> -->
+                </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1mMCymXeWX0h1-iIN1uokdCLVTkDYKbwf/view?usp=drive_link" target="_blank" class="certificate-link">
                         <img src="HTML.png" height="567" width="745">
@@ -876,7 +876,7 @@
                 </div>
                 <div class="certificate-item">
                     <a href="https://drive.google.com/file/d/1aSCt9DhhlOglVBkkjsgeP1W9AMR1C8tL/view?usp=drive_link" target="_blank" class="certificate-link">
-                        <img src=".idea/API%20SPRING.png" height="567" width="745">
+                        <img src="API%20SPRING.png" height="567" width="745">
                         <div class="certificate-overlay">
                             <button class="view-certificate-btn">View Certificate</button>
                         </div>
@@ -955,7 +955,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <img src=".idea/Screenshot%202024-07-17%20161226.png" alt="Project 2">
+                    <img src="Screenshot%202024-07-17%20161226.png" alt="Project 2">
                 </div>
                 <div class="project-info">
                     <h4>Prediction of Autism Spectrum Disorder</h4>
@@ -969,7 +969,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <img src=".idea/Screenshot%202025-04-02%20152430.png" alt="Project 3">
+                    <img src="Screenshot%202025-04-02%20152430.png" alt="Project 3">
                 </div>
                 <div class="project-info">
                     <h4>Laundry Service Management</h4>
